--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<title>UC Davis Lost and Found</title>
-	<script src="script.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>UCD Lost&Found</title>
+  
+    <style>
+      
+    </style>
 </head>
 <body>
-	<form>
-		<label for="LostOrFound">Lost/Found</label><br>
-		<input type="text" id="LostOrFound" name="LostOrFound"><br>
-		<label for="title">Title</label><br>
-		<input type="text" id="title" name="title"><br>
-		<label for="category">Category</label><br>
-		<input type="text" id="category" name="category"><br>
-		<label for="description">Description</label><br>
-		<input type="text" id="description" name="description"><br>
-		<label for="photoURL">Photo URL</label><br>
-		<input type="text" id="photoURL" name="photoURL"><br>
-		<label for="date">Lost/Date</label><br>
-		<input type="text" id="date" name="date"><br>
-		<label for="time">Time</label><br>
-		<input type="text" id="time" name="time"><br>
-		<label for="location">Location</label><br>
-		<input type="text" id="location" name="location"><br><br>
-		<button type="button" onclick="next()">Next</button>
-	</form>
+  
+  <!--  Script to redirect to login page -->
+  <script>
+    window.location.href = "screen01.html";
+  </script>
+    
 </body>
 </html>
