🌦💐 Checkpoint ./public/screen01.html:3398664/88 ./package.json:3398664/12

--- a/public/screen01.html
+++ b/public/screen01.html
@@ -37,6 +37,10 @@
       </div>
     </div>
   </main>
+  
+  <script>
+    var loginBtn = document.getElementBId("loginBtn")
+  </script>
     
 </body>
 </html>
