🚠🏯 Checkpoint ./public/screen02.html:3398664/559 ./public/style.css:3398664/413 ./public/screen01.html:3398664/145 ./public/screen03.html:3398664/307

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -2,9 +2,18 @@
 <html>
 <head>
 	<title>UC Davis Lost and Found</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      background-color: #feebb1;
+    }
+  </style>
 	<script src="script.js"></script>
 </head>
 <body>
+  <h1>Input the found item</h1>
 	<form>
 		<label for="LostOrFound">Lost/Found</label><br>
 		<input type="text" id="LostOrFound" name="LostOrFound"><br>
