--- a/public/screen02.html
+++ b/public/screen02.html
@@ -4,21 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UCD Lost&Find</title>
-  
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
     <style>
       body{
         background-color: #b3c1d1;
-      }
-      
-      header {
-        width: 100%;
-        height: auto;
-      }
-      
-      header img {
-        float: right;
-        width: 20vw;
-        margin: 2vw;
       }
     </style>
 </head>
@@ -30,9 +21,11 @@
   <main>
     <div class="finder">
       <h1>Did you find something?</h1>
+      <a href="screen03.html">I'm a finder</a>
     </div>
     <div class="seeker">
       <h1>Or are you looking for something?</h1>
+      <a>I'm a seeker</a>
     </div>
   </main>  
 </body>
