--- a/public/screen03.html
+++ b/public/screen03.html
@@ -13,6 +13,9 @@
 	<script src="script.js"></script>
 </head>
 <body>
+  <header>
+    <img id="logo" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007">
+  </header>
   <h1>Input the found item</h1>
 	<form>
 		<label for="LostOrFound">Lost/Found</label><br>
