🏁🚒 Checkpoint ./public/script.js:14169005/1138 ./public/screen03.html:14169005/8 ./public/screen04.html:14169005/32

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -28,7 +28,7 @@
 		<input type="text" id="description" name="description"><br>
 		<label for="photoURL">Photo URL</label><br>
 		<input type="text" id="photoURL" name="photoURL"><br>
-		<button type="button" onclick="next()">Next</button>
+		<button type="button" onclick="finderNext()">Next</button>
 	</form>
 </body>
 </html>
