--- a/public/screen04.html
+++ b/public/screen04.html
@@ -24,7 +24,7 @@
 		<input type="text" id="time" name="time"><br>
 		<label for="location">Location</label><br>
 		<input type="text" id="location" name="location"><br><br>
-		<button type="button" onclick="next()">Next</button>
+		<button type="button" onclick="finderSubmit()">Submit</button>
 	</form>
 </body>
 </html>
