🔋🍲 Checkpoint ./public/screen03.html:14169005/333 ./public/script.js:14169005/19

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -26,8 +26,8 @@
 		<input type="text" id="category" name="category"><br>
 		<label for="description">Description</label><br>
 		<input type="text" id="description" name="description"><br>
-		<label for="photoURL">Photo URL</label><br>
-		<input type="text" id="photoURL" name="photoURL"><br>
+		<label for="photoURL">Attach A Photo(Optional)</label><br>
+    <input id="imageUpload" type="file" accept="image/*" name="photo"/><br>
 		<button type="button" onclick="finderNext()">Next</button>
 	</form>
 </body>
