🌲🚍 Checkpoint ./public/script.js:14169005/6952 ./public/screen03.html:14169005/47

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -27,7 +27,7 @@
 		<label for="description">Description</label><br>
 		<input type="text" id="description" name="description"><br>
 		<label for="photoURL">Attach A Photo(Optional)</label><br>
-    <input id="imgUpload" type="file" accept="image/*" name="photo"/><br>
+    <input id="imgUpload" type="file" onlick="uploadImg" accept="image/*" name="photo"/><br>
 		<button type="button" onclick="finderNext()">Next</button>
 	</form>
 </body>
