--- a/public/screen03.html
+++ b/public/screen03.html
@@ -9,6 +9,7 @@
     body {
       background-color: #feebb1;
     }
+    
   </style>
 	<script src="script.js"></script>
 </head>
@@ -27,7 +28,7 @@
 		<label for="description">Description</label><br>
 		<input type="text" id="description" name="description"><br>
 		<label for="photoURL">Attach A Photo(Optional)</label><br>
-    <input id="imgUpload" type="file" onlick="uploadImg" accept="image/*" name="photo"/><br>
+    <input id="imgUpload" type="file" onlick="uploadImg()" accept="image/*" name="photo"/><br>
 		<button type="button" onclick="finderNext()">Next</button>
 	</form>
 </body>
