👰📼 Checkpoint ./public/screen03.html:3398664/261

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -29,7 +29,14 @@
 		<input type="text" id="description" name="description"><br>
 		<label for="photoURL">Attach A Photo(Optional)</label><br>
     <input id="imgUpload" type="file" accept="image/*" name="photo"/><br>
-		<button type="button" onclick="finderNext()">Next</button>
+		<button type="button" id="nextBtn">Next</button>
 	</form>
+  
+  <script>
+    document.querySelector('#nextBtn').addEventListener('click', () => {
+      
+    });
+  
+  </script>
 </body>
 </html>
