🏰🎅 Checkpoint ./server.js:3398664/156 ./public/screen01.html:3398664/247

--- a/public/screen01.html
+++ b/public/screen01.html
@@ -78,7 +78,7 @@
   <body>
     <main>
       <div id="shieldsImg"></div>
-      <div class="login">
+      <a href="auth/google" class="login">
         <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007"/>
         <div class="button">
           <figure><img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fgoogle.jpg?v=1591018117727" /></figure>
@@ -86,7 +86,7 @@
             Login with Google
           </div>
         </div>
-      </div>
+      </a>
     </main>
 
     <script>
