--- a/public/screen01.html
+++ b/public/screen01.html
@@ -78,15 +78,18 @@
   <body>
     <main>
       <div id="shieldsImg"></div>
-      <a href="auth/google" class="login">
+      <div>
         <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007"/>
-        <div class="button">
-          <figure><img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fgoogle.jpg?v=1591018117727" /></figure>
-          <div class="text">
-            Login with Google
+        <a href="auth/google" class="login">
+          <div class="button">
+            <figure><img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fgoogle.jpg?v=1591018117727" /></figure>
+            <div class="text">
+              Login with Google
+            </div>
           </div>
-        </div>
-      </a>
+        </a>
+        <h1 id="errorMsg"></h1>
+      </div>
     </main>
 
     <script>
@@ -101,6 +104,11 @@
         // For testing
         window.location.href = "screen02.html";
       });
+      
+      // TO display error message
+      let url = window.location.href;
+let id = url.slice(url.indexOf("id=")+3);
+console.log("id: " + id);
     </script>
   </body>
 </html>
