🍂🎍 Checkpoint ./public/screen01.html:3398664/321 ./public/index.html:3398664/2 ./public/screen02.html:3398664/10 ./public/screen03.html:3398664/106

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -102,6 +102,9 @@
     document.querySelector('#nextBtn').addEventListener('click', () => {
       
     });
+    
+    // Logo redirction
+    document.querySelector('#logo').onclick = function () 
   
   </script>
 </body>
