--- a/public/screen03.html
+++ b/public/screen03.html
@@ -38,7 +38,7 @@
         <label for="photoURL">Attach A Photo(Optional)</label><br>
         <input id="imgUpload" type="file" accept="image/*" name="photo" title=" "/>        
         <br>
-        <button type="button" id="nextBtn" onclick(finderNext())>Next</button>
+        <button onclick="finderNext()" type="button" id="nextBtn">Next</button>
     </form>
     </section>
 
