--- a/public/screen03.html
+++ b/public/screen03.html
@@ -8,49 +8,28 @@
   <style>
     body {
       background-color: #feebb1;
-    }  
+    }
+    
   </style>
 	<script src="script.js"></script>
 </head>
 <body>
   <header>
-    <a href="/screen02.html">
-      <img id="logo" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007">
-    </a>
+    <img id="logo" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007">
   </header>
-  <main>
-    <h1>Input the found item</h1>
-    <section id="form">
-      <form>
-        <label for="title">Title</label><br>
-        <input type="text" id="title" name="title"><br>
-        <label for="category">Category</label><br>
-        <input list="category" id="category" name="category"><br>
-          <datalist id="category">
-            <option value="Edge"/>
-            <option value="Firefox"/>
-            <option value="Chrome"/>
-            <option value="Opera"/>
-            <option value="Safari"/>
-          </datalist>
-        <label for="description">Description</label><br>
-        <input type="text" id="description" name="description"><br>
-        <label for="photoURL">Attach A Photo(Optional)</label><br>
-        <input id="imgUpload" type="file" accept="image/*" name="photo" title=" "/>        
-        <br>
-        <button onclick="finderNext()" type="button" id="nextBtn">Next</button>
-    </form>
-    </section>
-
-    <section id="search">
-      <h1>Or search for existing requests</h1>
-      <div class="search-container">
-        <form action="/action_page.php">
-          <input type="text" placeholder="Search.." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
-        </form>
-      </div>
-    </section>
-  </main>
+  <h1>Input the found item</h1>
+	<form>
+		<label for="LostOrFound">Lost/Found</label><br>
+		<input type="text" id="LostOrFound" name="LostOrFound"><br>
+		<label for="title">Title</label><br>
+		<input type="text" id="title" name="title"><br>
+		<label for="category">Category</label><br>
+		<input type="text" id="category" name="category"><br>
+		<label for="description">Description</label><br>
+		<input type="text" id="description" name="description"><br>
+		<label for="photoURL">Attach A Photo(Optional)</label><br>
+    <input id="imgUpload" type="file" accept="image/*" name="photo"/><br>
+		<button type="button" onclick="finderNext()">Next</button>
+	</form>
 </body>
 </html>
