--- a/public/screen04.html
+++ b/public/screen04.html
@@ -24,9 +24,9 @@
       <label for="date">Lost/Date</label><br>
       <input type="text" id="date" name="date"><br>
       <label for="time">Time</label><br>
-      <input type="text" id="time" name="time"><br>
+      <input type="text" id="time" name="time"><br>s
       <label for="location">Location</label><br>
-      <input type="text" id="location" name="location"><br><br>
+      <input type="text" id="location" name="location" autocomplete="on"><br>
       <button type="button" onclick="finderSubmit()">Submit</button>
     </form>
   </section>
