😼🌸 Checkpoint ./public/style.css:3398664/296 ./public/index.html:3398664/2 ./public/screen03.html:3398664/251 ./public/screen04.html:3398664/173

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -12,7 +12,8 @@
     textarea{
       background-color:#e5e5e5;
       border: none;
-      width: 90%;
+      width: 100%;
+      font-size: 1.5em;
     }
     
     #nextBtn {
@@ -28,7 +29,7 @@
     </a>
   </header>
   <main>
-    <h1>Input the found item</h1>
+    <h1 id="formTitle">Input the found item</h1>
     <section id="form">
       <form>
         <label for="title">Title</label><br>
@@ -63,6 +64,12 @@
       </div>
     </section>
   </main>
+  
+  <script>
+    document.querySelector('.btn').onclick = () => {
+      window.location.href = '/screen04.html';
+    };
+  </script>
 	
 </body>
 </html>
