--- a/public/screen04.html
+++ b/public/screen04.html
@@ -18,18 +18,20 @@
       <img id="logo" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007">
     </a>
   </header>
-  <h1>Input the found item</h1>
-  <section id="form">
-    <form>
-      <label for="date">Lost/Date</label><br>
-      <input type="text" id="date" name="date"><br>
-      <label for="time">Time</label><br>
-      <input type="text" id="time" name="time"><br>s
-      <label for="location">Location</label><br>
-      <input type="text" id="location" name="location" autocomplete="on"><br>
-      <button type="button" onclick="finderSubmit()">Submit</button>
-    </form>
-  </section>
+  <main>
+    <h1>Input the found item</h1>
+    <section id="form">
+      <form>
+        <label for="date">Lost/Date</label><br>
+        <input type="text" id="date" name="date"><br>
+        <label for="time">Time</label><br>
+        <input type="text" id="time" name="time"><br>s
+        <label for="location">Location</label><br>
+        <input type="text" id="location" name="location" autocomplete="on"><br>
+        <button type="button" onclick="finderSubmit()">Submit</button>
+      </form>
+    </section>
+  </main>
   <script>
   
     
