--- a/public/screen03.html
+++ b/public/screen03.html
@@ -37,11 +37,11 @@
         <label for="category">Category</label><br>
         <input list="category" id="category" name="category"><br>
         <datalist id="category">
-          <option value="Edge"/>
-          <option value="Firefox"/>
-          <option value="Chrome"/>
-          <option value="Opera"/>
-          <option value="Safari"/>
+          <option value="Edge">
+          <option value="Firefox">
+          <option value="Chrome">
+          <option value="Opera">
+          <option value="Safari">
         </datalist>
         <label for="description">Description</label><br>
         <textarea id="description" name="description"></textarea><br>
