--- a/public/screen04.html
+++ b/public/screen04.html
@@ -19,7 +19,7 @@
     </a>
   </header>
   <main>
-    <h1>Input the found item</h1>
+    <h1 id="formTitle">Input the found item</h1>
     <section id="form">
       <form>
         <label for="date">Lost/Date</label><br>
