--- a/public/screen04.html
+++ b/public/screen04.html
@@ -34,6 +34,14 @@
   </main>
   <script>
   
+    // For map
+    var map;
+    function initMap() {
+      map = new google.maps.Map(document.getElementById("map"), {
+        center: { lat: -34.397, lng: 150.644 },
+        zoom: 8
+      });
+    }
     
   </script>
 </body>
