📕🎣 Checkpoint ./public/screen03.html:14169005/275

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -59,17 +59,12 @@
       <div class="search-container">
         <form action="/action_page.php">
           <input type="text" placeholder="Search.." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button>
+          <button type="submit"><i class="fa fa-search"></i></button><br>
+          <button type="button" class="btn" onclick="showResult()">Show Result</button>
         </form>
       </div>
     </section>
   </main>
-  
-  <script>
-    document.querySelector('.btn').onclick = () => {
-      window.location.href = '/screen04.html';
-    };
-  </script>
 	
 </body>
 </html>
