--- a/public/screen04.html
+++ b/public/screen04.html
@@ -5,6 +5,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script> 
   <style>
     body {
       background-color: #feebb1;
@@ -18,12 +19,12 @@
   </style>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
   
-  /*
-  /*<script
+  <!--
+  <script 
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHktMb8c0V2p9ynoRk4jJImUwkwBxVjjs&callback=initMap&libraries=&v=weekly"
     defer
   ></script>
-  */
+  -->
 </head>
 <body>
   <header>
