--- a/public/screen04.html
+++ b/public/screen04.html
@@ -28,24 +28,13 @@
 </head>
 <body>
   <header>
-    <a href="/screen02.html">
+    <a href="/screen05.html">
       <img id="logo" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007">
     </a>
   </header>
   <main>
-    <h1 id="formTitle">Input the found item</h1>
-    <section id="form">
-      <form>
-        <label for="date">Lost/Date</label><br>
-        <input type="text" id="date" name="date"><br>
-        <label for="time">Time</label><br>
-        <input type="text" id="time" name="time"><br>
-        <label for="location">Location</label><br>
-        <input type="text" id="location" name="location"><br>
-        <div id="map"></div>
-        <button type="button" onclick="finderSubmit()">Submit</button>
-      </form>
-    </section>
+    <h1 id="formTitle">Search Results</h1>
+    <div onload="showResults()"></div>
   </main>
   <script>
     /*
