🎣🍶 Checkpoint ./public/screen04.html:14169005/10750 ./public/screen03.html:14169005/321 ./public/script.js:14169005/15 ./public/screen05.html:14169005/1750

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <header>
-    <a href="/screen02.html">
+    <a href="/screen03.html">
       <img id="logo" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007">
     </a>
   </header>
@@ -60,11 +60,12 @@
         <form action="/action_page.php">
           <input type="text" placeholder="Search.." name="search">
           <button type="submit"><i class="fa fa-search"></i></button><br>
-          <button type="button" class="btn" onclick="showResult()">Show Result</button>
+          <button type="button" class="btn" onclick="searchForResult()">Search</button>
         </form>
       </div>
     </section>
+    
+    <sc
   </main>
-	
 </body>
 </html>
