--- a/public/screen05.html
+++ b/public/screen05.html
@@ -1,11 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>UC Davis Lost and Found</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+  <script src="script.js"></script> 
+  <style>
+    body {
+      background-color: #feebb1;
+    }
+    
+    /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+    #map {
+      height: 100%;
+    }
+  </style>
+  <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+  
+  <!--
+  <script 
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHktMb8c0V2p9ynoRk4jJImUwkwBxVjjs&callback=initMap&libraries=&v=weekly"
+    defer
+  ></script>
+  -->
 </head>
 <body>
-	<div>
-		
-	</div>
+  <header>
+    <a href="/screen05.html">
+      <img id="logo" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007">
+    </a>
+  </header>
+  <main>
+    <h1 id="formTitle">Search Results</h1>
+    <div onload="showResults()"></div>
+  </main>
+  <script>
+    /*
+    // For map
+     (function(exports) {
+        "use strict";
+
+        function initMap() {
+          exports.map = new google.maps.Map(document.getElementById("map"), {
+            center: {
+              lat: -34.397,
+              lng: 150.644
+            },
+            zoom: 8
+          });
+        }
+
+        exports.initMap = initMap;
+      })((this.window = this.window || {}));
+    */
+  </script>
 </body>
 </html>
