💎✍️ Checkpoint ./server.js:14169005/291 ./public/script.js:14169005/4 ./public/screen05.html:14169005/131

--- a/public/screen05.html
+++ b/public/screen05.html
@@ -34,7 +34,8 @@
   </header>
   <main>
     <h1 id="formTitle">Search Results</h1>
-    <div onload="showResults()"></div>
+    <div onload="showDataStored()"></div>
+    <button onclick="showDataStored()">Click to show</button>
   </main>
   <script>
     /*
