--- a/public/screen05.html
+++ b/public/screen05.html
@@ -36,6 +36,33 @@
     <h1 id="formTitle">Search Results</h1>
     <div onload="showDataStored()"></div>
     <button onclick="showDataStored()">Click to show</button>
+    
+    <section id="form">
+      <form>
+        <label for="date">Lost/Date</label><br>
+        <input type="text" id="date" name="date"><br>
+        <label for="time">Time</label><br>
+        <input type="text" id="time" name="time"><br>
+        <label for="location">Location</label><br>
+        <input type="text" id="location" name="location"><br>
+        <div id="map"></div>
+        <button type="button" onclick="finderSubmit()">Submit</button>
+        <button type="button" onclick="search()">Search</button>
+        <label for="title">Title</label><br>
+        <input type="text" id="title" name="title"><br>
+        <label for="category">Category</label><br>
+        <input list="category" id="category" name="category"><br>
+        <datalist id="category">
+          <option value="Edge">
+          <option value="Firefox">
+          <option value="Chrome">
+          <option value="Opera">
+          <option value="Safari">
+        </datalist>
+        <label for="description">Description</label><br>
+        <textarea id="description" name="description"></textarea><br>                              
+      </form>
+    </section>
   </main>
   <script>
     /*
