--- a/public/screen05.html
+++ b/public/screen05.html
@@ -33,7 +33,7 @@
     </a>
   </header>
   <main>
-    <h1 id="formTitle">Search Results</h1>
+    <h1 id="formTitle">Search for existing requests</h1>
     <div onload="showDataStored()"></div>
     <button onclick="showDataStored()">Click to show</button>
     
