--- a/public/screen10.html
+++ b/public/screen10.html
@@ -35,7 +35,8 @@
   <main>
     <h1 id="formTitle">Search Results</h1>
     <div onload="showDataStored()"></div>
-    <button onclick="showDataStored()">Click to show</button>
+    <button onclick="loadResult()">Click to show Search result</button>
+    <button onclick="showAllDataStored()">Click to show all data stored</button>
   </main>
   <script>
     /*
