🐌🏐 Checkpoint ./public/screen05.html:14169005/660

--- a/public/screen05.html
+++ b/public/screen05.html
@@ -42,7 +42,14 @@
         <label for="date">Lost/Date</label><br>
         <input type="text" id="date" name="date"><br>
         <label for="time">Time</label><br>
+        
+        <input type="text" id="startTime" name="startTime"><br>
+        <label for="startTime">Start Time</label><br>
+        <input type="text" id="startDate" name="startDate"><br>
+        <label for="startDate">Start</label><br>
         <input type="text" id="time" name="time"><br>
+        <input type="text" id="endTime" name="endTime"><br>
+        <label for="endTime">End Time</label><br>
         <label for="location">Location</label><br>
         <input type="text" id="location" name="location"><br>
         <div id="map"></div>
