📹🌵 Checkpoint ./public/screen04.html:14169005/18 ./public/screen05.html:14169005/472

--- a/public/screen04.html
+++ b/public/screen04.html
@@ -36,10 +36,10 @@
     <h1 id="formTitle">Input the found item</h1>
     <section id="form">
       <form>
-        <label for="date">Lost/Date</label><br>
-        <input type="text" id="date" name="date"><br>
+        <label for="date">Lost Date</label><br>
+        <input type="date" id="date" name="date"><br>
         <label for="time">Time</label><br>
-        <input type="text" id="time" name="time"><br>
+        <input type="time" id="time" name="time"><br>
         <label for="location">Location</label><br>
         <input type="text" id="location" name="location"><br>
         <div id="map"></div>
