🌾🏌 Checkpoint ./public/screen02.html:14169005/18 ./public/screen06.html:14169005/6616

--- a/public/screen02.html
+++ b/public/screen02.html
@@ -54,7 +54,7 @@
     </div>
     <div class="option" > 
       <h1>Or are you looking for something?</h1>
-      <a href="#" style="background-color: #142a50">I'm a seeker</a>
+      <a href="screen06.html" style="background-color: #142a50">I'm a seeker</a>
     </div>
   </main>  
 </body>
