--- a/public/screen06.html
+++ b/public/screen06.html
@@ -52,7 +52,7 @@
         <input id="imgUpload" type="file" accept="image/*" name="photo" title=" "/>        
         <br>
         <div id="btnRow">
-          <button type="button" class="btn" id="nextBtn" onclick="finderNext()">Next</button>
+          <button type="button" class="btn" id="nextBtn" onclick="seekerNext()">Next</button>
         </div>
     </form>
     </section>
