🐌👌 Checkpoint ./public/screen08.html:14169005/13

--- a/public/screen08.html
+++ b/public/screen08.html
@@ -33,7 +33,7 @@
     </a>
   </header>
   <main>
-    <h1 id="formTitle">Search for existing requests</h1>
+    <h1 id="formTitle">Search for existing items</h1>
     <div onload="showDataStored()"></div>
     <button onclick="showDataStored()">Click to show</button>
     
