--- a/public/screen04.html
+++ b/public/screen04.html
@@ -14,7 +14,7 @@
     /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
     #map {
-      height: 100%;
+      height: 
     }
   </style>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
@@ -41,7 +41,7 @@
         <label for="time">Time</label><br>
         <input type="time" id="time" name="time"><br>
         <label for="location">Location</label><br>
-        <input type="text" id="location" name="location"><br>
+<!--         <input type="text" id="location" name="location"><br> -->
         <div id="map"></div>
         <button type="button" onclick="finderSubmit()">Submit</button>
         <button type="button" onclick="search()">Search</button>
@@ -50,7 +50,6 @@
     </section>
   </main>
   <script>
-    /*
     // For map
      (function(exports) {
         "use strict";
@@ -67,7 +66,6 @@
 
         exports.initMap = initMap;
       })((this.window = this.window || {}));
-    */
     
     
   </script>
