--- a/public/screen01.html
+++ b/public/screen01.html
@@ -11,19 +11,19 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <style>
-      body {
-        height: 100%;
+      html, body, main {
         background-color: #365c85;
+        height: 100%;
       }
 
       main {
         display: flex;
-        height: 100%;
+        align-items: center;
       }
 
       #shieldsImg {
         width: 50%;
-        height; 100%;
+        height: 100%;
         background-image: url(https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FShields.jpg?v=1591018164366);
         background-size: cover;
         background-position: center;
@@ -77,6 +77,12 @@
       #errorMsg {
         color: red;
         font-weight: bolder;
+      }
+      
+      @media (max-width: 600px) {
+        main {
+          flex-direction: column;
+        }
       }
     </style>
   </head>
