--- a/public/screen04.html
+++ b/public/screen04.html
@@ -14,7 +14,7 @@
     /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
     #map {
-      height: 
+      height: 300px;
     }
   </style>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
