🛋✊ Checkpoint ./public/screen01.html:3398664/26

--- a/public/screen01.html
+++ b/public/screen01.html
@@ -91,7 +91,7 @@
     <main>
       <div id="shieldsImg"></div>
       <div>
-        <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007"/>
+        <img id="logo" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2FLogo.png?v=1591015746007"/>
         <a href="auth/google" class="login">
           <div class="button">
             <figure><img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fgoogle.jpg?v=1591018117727" /></figure>
