🍖🛥 Checkpoint ./public/index.html:3398664/20 ./public/style.css:3398664/16 ./public/screen04.html:3398664/378

--- a/public/screen04.html
+++ b/public/screen04.html
@@ -43,11 +43,12 @@
         <label for="location">Location</label><br>
 <!--         <input type="text" id="location" name="location"><br> -->
         <div id="map"></div>
-        <button type="button" onclick="finderSubmit()">Submit</button>
-        <button type="button" onclick="search()">Search</button>
-                                       
+        <div id="btnRow">
+          <button type="button" class="btn" onclick="finderSubmit()">Submit</button>       
+        </div>                
       </form>
     </section>
+    <button type="button" onclick="search()">Search</button>
   </main>
   <script>
     // For map
