😀🦃 Checkpoint ./public/screen03.html:3398664/1299 ./public/style.css:3398664/15

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -59,13 +59,14 @@
 
     <section id="search">
       <h1>Or search for existing requests</h1>
-      <div class="search-container">
-        <form action="/action_page.php">
-          <input type="text" placeholder="Search.." name="search">
-          <button type="submit"><i class="fa fa-search"></i></button><br>
-          <button type="button" class="btn" onclick="redirect()">Search</button>
-        </form>
-      </div>
+      <a href="/screen05.html" class="searchBtn">
+        <div>
+          <div class="whiteSpace">
+            
+          </div>
+          <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417" />
+        </div>
+      </a>
     </section>
     
     <script>
