--- a/public/screen03.html
+++ b/public/screen03.html
@@ -12,7 +12,7 @@
     textarea{
       background-color:#e5e5e5;
       border: none;
-      width: 100%;
+      width: 99%;
       font-size: 1.5em;
     }
     
@@ -60,7 +60,9 @@
     <section id="search">
       <h1>Or search for existing requests</h1>
       <a href="/screen05.html" class="searchBtn">
-          <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417" />
+          <div>
+            <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417" />
+          </div>
       </a>
     </section>
     
