👫🛎 Checkpoint ./public/style.css:3398664/243 ./public/screen03.html:3398664/205

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -52,7 +52,8 @@
         <input id="imgUpload" type="file" accept="image/*" name="photo" title=" "/>        
         <br>
         <div id="btnRow">
-          <button type="button" class="btn" id="nextBtn" onclick="finderNext()">Next</button>
+<!--           <button type="button" class="btn" id="nextBtn" onclick="finderNext()">Next</button> -->
+          <button type="button" class="btn" id="nextBtn" onclick="redirect()">Next</button>
         </div>
     </form>
     </section>
@@ -68,7 +69,7 @@
     
     <script>
       function redirect(){
-        window.location.href = "screen05.html"; 
+        window.location.href = "screen04.html"; 
       }
     </script>
   </main>
