--- a/public/screen01.html
+++ b/public/screen01.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="reset.css" />
-    <link rel="stylesheet" href="style.css" />
+<!--     <link rel="stylesheet" href="style.css" /> -->
     <style>
       html, body, main {
         background-color: #365c85;
