--- a/public/screen01.html
+++ b/public/screen01.html
@@ -14,6 +14,8 @@
       html, body, main {
         background-color: #365c85;
         height: 100%;
+        margin: auto;
+        text-align: center;
       }
 
       main {
@@ -80,6 +82,7 @@
       #errorMsg {
         color: red;
         font-weight: bolder;
+        font-size: 2em;
       }
       
       #logo {
