🌕👯 Checkpoint ./public/screen03.html:14169005/226 ./public/script.js:14169005/5440

--- a/public/screen03.html
+++ b/public/screen03.html
@@ -52,8 +52,7 @@
         <input id="imgUpload" type="file" accept="image/*" name="photo" title=" "/>        
         <br>
         <div id="btnRow">
-<!--           <button type="button" class="btn" id="nextBtn" onclick="finderNext()">Next</button> -->
-          <button type="button" class="btn" id="nextBtn" onclick="redirect()">Next</button>
+          <button type="button" class="btn" id="nextBtn" onclick="finderNext()">Next</button>
         </div>
     </form>
     </section>
@@ -68,9 +67,7 @@
     </section>
     
     <script>
-      function redirect(){
-        window.location.href = "screen04.html"; 
-      }
+      
     </script>
   </main>
 </body>
