🕍☔️ Checkpoint ./public/script.js:14169005/2458 ./public/screen06.html:14169005/713 ./public/screen05.html:14169005/30 ./public/screen08.html:14169005/19

--- a/public/screen08.html
+++ b/public/screen08.html
@@ -64,7 +64,7 @@
           <option value="Bike/Scooter">
           <option value="Others">
         </datalist>
-        <button type="button" onclick="search2()">Search</button>
+        <button type="button" onclick="seekerSearch()">Search</button>
       </form>
     </section>
   </main>
