--- a/public/screen03.html
+++ b/public/screen03.html
@@ -29,7 +29,7 @@
     </a>
   </header>
   <main>
-    <h1 id="formTitle">Input the found item</h1>
+    <h1 class="sectionTitle">Input the found item</h1>
     <section id="form">
       <form>
         <label for="title">Title</label><br>
@@ -57,11 +57,11 @@
     </form>
     </section>
     
-    <h1>Or search for existing requests</h1>
+    <h1 class="sectionTitle">Or search for existing requests</h1>
     <section id="search">
-      <div class="searchBtn">
-        <input>
-        <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417" />
+      <div class="search-container">
+        <input type="text" placeholder="Search.." name="search">
+        <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417">
       </div>
     </section>
     
