--- a/public/screen04.html
+++ b/public/screen04.html
@@ -34,7 +34,7 @@
     </a>
   </header>
   <main>
-    <h1 id="formTitle">Input the found item</h1>
+    <h1 class="sectionTitle">Input the found item</h1>
     <section id="form">
       <form>
         <label for="date">Lost Date</label><br>
