🛬🚦 Checkpoint ./public/style.css:3398664/363 ./public/screen05.html:3398664/1978 ./public/screen04.html:3398664/40

--- a/public/screen04.html
+++ b/public/screen04.html
@@ -47,9 +47,9 @@
         
         <label for="date&Time">Date & Time</label><br>
         <div class="dateNTime">
-          <input type="date" id="date" name="date">
+          <input class="date" type="date" id="date" name="date">
 <!--           <label for="time">Time</label><br> -->
-          <input type="time" id="time" name="time">
+          <input class="time" type="time" id="time" name="time">
         </div>
         <label for="location">Location</label><br>
 <!--         <input type="text" id="location" name="location"><br> -->
