--- a/public/screen04.html
+++ b/public/screen04.html
@@ -33,6 +33,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHktMb8c0V2p9ynoRk4jJImUwkwBxVjjs&callback=initMap&libraries=&v=weekly"
       defer
     ></script>
+  <script src="/googleMap.js"></script>
 </head>
 <body>
   <header>
@@ -73,25 +74,5 @@
       </div>
     </section>
   </main>
-  <script>
-    // For map
-    (function(exports) {
-      "use strict";
-
-      function initMap() {
-        exports.map = new google.maps.Map(document.getElementById("map"), {
-          center: {
-            lat: 38.537 ,
-            lng:  -121.754
-          },
-          zoom: 16
-        });
-      }
-
-      exports.initMap = initMap;
-    })((this.window = this.window || {}));
-    
-    
-  </script>
 </body>
 </html>
