🍀🐂 Checkpoint ./public/screen05.html:3398664/424 ./public/screen10.html:3398664/440

--- a/public/screen10.html
+++ b/public/screen10.html
@@ -37,26 +37,12 @@
     <div onload="showDataStored()"></div>
     <button onclick="loadResult()">Click to show Search result</button>
     <button onclick="showAllDataStored()">Click to show all data stored</button>
+    <ul id="results">
+      
+    </ul>
   </main>
   <script>
-    /*
-    // For map
-     (function(exports) {
-        "use strict";
-
-        function initMap() {
-          exports.map = new google.maps.Map(document.getElementById("map"), {
-            center: {
-              lat: -34.397,
-              lng: 150.644
-            },
-            zoom: 8
-          });
-        }
-
-        exports.initMap = initMap;
-      })((this.window = this.window || {}));
-    */
+    
   </script>
 </body>
 </html>
