🎫🏃 Checkpoint ./public/map.html:3398664/2683 ./public/index.html:3398664/11 ./public/googleMap.js:3398664/8 ./public/screen05.html:3398664/704

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   
   <!--  Script to redirect to login page -->
   <script>
-    window.location.href = "screen05.html";
+    window.location.href = "map.html";
   </script>
 </body>
 </html>
