--- a/public/screen05.html
+++ b/public/screen05.html
@@ -104,10 +104,14 @@
     document.getElementById('searchTxt').value = sessionStorage.getItem('search');
   </script>
   
-   <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHktMb8c0V2p9ynoRk4jJImUwkwBxVjjs&callback=initMap&libraries=&v=weekly"
+   <!-- Get Google Maps, and the places library, using my API key
+    This script runs and then calls our initMaps function.  defer means it does 
+    not run until the page is loaded -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHktMb8c0V2p9ynoRk4jJImUwkwBxVjjs&callback=initMap&libraries=places&v=weekly"
       defer
     ></script>
-   <script src="/googleMap.js"></script>
+  <!-- the map is added to the div "map" by the initMaps function, which is in this script -->
+  <script src="googleMap.js"></script>
 </body>
 </html>
