--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   
   <!--  Script to redirect to login page -->
   <script>
-    window.location.href = "map.html";
+    window.location.href = "screen05.html";
   </script>
 </body>
 </html>
