🛣👮 Checkpoint ./server.js:14169005/173 ./public/screen05.html:14169005/4

--- a/public/screen05.html
+++ b/public/screen05.html
@@ -101,7 +101,7 @@
     </section>
   </main>
   <script>
-    document.getElementById('searchTxt').value = sessionStorage.getItem('search');
+    document.getElementById('searchTxt').value = sessionStorage.getItem('searchText');
   </script>
   
    <!-- Get Google Maps, and the places library, using my API key
