--- a/public/screen06.html
+++ b/public/screen06.html
@@ -57,13 +57,12 @@
     </form>
     </section>
 
-     <h1>Or search for existing requests</h1>
+    <h1 class="sectionTitle">Or search for existing requests</h1>
     <section id="search">
-      <a href="/screen08.html" class="searchBtn">
-          <div>
-            <img src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417" />
-          </div>
-      </a>
+      <div class="search-container">
+        <input id="searchTxt" type="text" placeholder="Search.." name="search">
+        <img id="searchBtn" onclick="searchBtnClick2()" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417">
+      </div>
     </section>
     
     <script>
