🏃🍶 Checkpoint ./public/screen07.html:14169005/193 ./public/screen08.html:14169005/2022

--- a/public/screen07.html
+++ b/public/screen07.html
@@ -56,12 +56,12 @@
         </div>
         <button type="button" onclick="seekerSubmit()">Submit</button>
         <h1 class="sectionTitle">Or search for existing requests</h1>
-    <section id="search">
-      <div class="search-container">
-        <input id="searchTxt" type="text" placeholder="Search.." name="search">
-        <img id="searchBtn" onclick="searchBtnClick()" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417">
-      </div>
-    </section>
+        <section id="search">
+          <div class="search-container">
+            <input id="searchTxt" type="text" placeholder="Search.." name="search">
+            <img id="searchBtn" onclick="searchBtnClick2()" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417">
+          </div>
+        </section>
                                        
       </form>
     </section>
