--- a/public/screen08.html
+++ b/public/screen08.html
@@ -34,8 +34,12 @@
   </header>
   <main>
     <h1 id="formTitle">Search for existing items</h1>
-    <div onload="showDataStored()"></div>
-    <button onclick="showDataStored()">Click to show</button>
+    <section id="search">
+      <div class="search-container">
+        <input id="searchTxt" type="text" placeholder="Search.." name="search">
+        <img id="searchBtn" onclick="searchBtnClick()" src="https://cdn.glitch.com/8b0c4380-0d00-4dd0-8b77-033196b79fe7%2Fsearch-solid.svg?v=1591018108417">
+      </div>
+    </section>
     
     <section id="form">
       <form>         
@@ -64,29 +68,24 @@
           <option value="Bike/Scooter">
           <option value="Others">
         </datalist>
-        <button type="button" onclick="seekerSearch()">Search</button>
+        <div id="btnRow">
+          <button type="button" class="btn" onclick="seekerSearch()">Search</button>       
+        </div> 
       </form>
     </section>
+    
   </main>
   <script>
-    /*
-    // For map
-     (function(exports) {
-        "use strict";
-
-        function initMap() {
-          exports.map = new google.maps.Map(document.getElementById("map"), {
-            center: {
-              lat: -34.397,
-              lng: 150.644
-            },
-            zoom: 8
-          });
-        }
-
-        exports.initMap = initMap;
-      })((this.window = this.window || {}));
-    */
-  </script>
+      document.getElementById('searchTxt').value = sessionStorage.getItem('searchText');
+    </script>
+  <!-- Get Google Maps, and the places library, using my API key
+    This script runs and then calls our initMaps function.  defer means it does 
+    not run until the page is loaded -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHktMb8c0V2p9ynoRk4jJImUwkwBxVjjs&callback=initMap&libraries=places&v=weekly"
+      defer
+    ></script>
+  <!-- the map is added to the div "map" by the initMaps function, which is in this script -->
+  <script src="googleMap.js"></script>
 </body>
 </html>
