--- a/public/screen09.html
+++ b/public/screen09.html
@@ -38,25 +38,14 @@
     <button onclick="loadResult()">Click to show Search result</button>
     <button onclick="showAllDataStored()">Click to show all data stored</button>
   </main>
-  <script>
-    /*
-    // For map
-     (function(exports) {
-        "use strict";
-
-        function initMap() {
-          exports.map = new google.maps.Map(document.getElementById("map"), {
-            center: {
-              lat: -34.397,
-              lng: 150.644
-            },
-            zoom: 8
-          });
-        }
-
-        exports.initMap = initMap;
-      })((this.window = this.window || {}));
-    */
-  </script>
+  <!-- Get Google Maps, and the places library, using my API key
+    This script runs and then calls our initMaps function.  defer means it does 
+    not run until the page is loaded -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHktMb8c0V2p9ynoRk4jJImUwkwBxVjjs&callback=initMap&libraries=places&v=weekly"
+      defer
+    ></script>
+  <!-- the map is added to the div "map" by the initMaps function, which is in this script -->
+  <script src="googleMap.js"></script>
 </body>
 </html>
