🌺🌗 Checkpoint ./public/script.js:3398664/387 ./public/screen09.html:3398664/83

--- a/public/screen09.html
+++ b/public/screen09.html
@@ -45,7 +45,8 @@
     </ul>
   </main>
   <script>
-    
+    let url = window.location.href;
+    let id = url.slice(url.indexOf("id=")+3);
   </script>
 </body>
 </html>
