🎪🐓 Checkpoint ./public/screen09.html:3398664/2046 ./public/script.js:3398664/32

--- a/public/screen09.html
+++ b/public/screen09.html
@@ -56,6 +56,15 @@
       // loadResult()
       console.log('showing search');
       
+      var searchText = sessionStorage.getItem('searchText'); 
+      var category = sessionStorage.getItem('category'); 
+      // var location = sessionStorage.getItem('location'); 
+      // var startDate = sessionStorage.getItem('startDate'); 
+      // var endDate = sessionStorage.getItem('endDate'); 
+      // var startTime = sessionStorage.getItem('startTime'); 
+      // var endTime = sessionStorage.getItem('endTime'); 
+      
+      // searchQuery.innerHTML = startDate + " - " + endDate;
     }
     else if(action == 'showAll') {
       console.log('showing all');
