⏲🌔 Checkpoint ./public/style.css:3398664/109 ./public/screen09.html:3398664/11 ./public/script.js:3398664/479

--- a/public/screen09.html
+++ b/public/screen09.html
@@ -70,7 +70,7 @@
                 <h2>Date</h2>
                 <p>Test Date</p>
               </div>
-              <p class="description">
+              <p class="description infoItem">
                 Ramdom itme found in ramdom place, just for testing
               </p>
             </div>
