--- a/public/screen09.html
+++ b/public/screen09.html
@@ -79,6 +79,23 @@
       </ul>
     </main>
     <script>
+      function setCollapsible() {
+        var coll = document.getElementsByClassName("collapsible");\\
+
+        for (var i = 0; i < coll.length; i++) {
+          coll[i].addEventListener("click", function() {
+            this.classList.toggle("active");
+            var content = this.nextElementSibling;
+            if (content.style.maxHeight) {
+              content.style.maxHeight = null;
+            } else {
+              content.style.maxHeight = content.scrollHeight + "px";
+            }
+          });
+        }
+      }
+    </script>
+    <script>
       // Display results
       let url = window.location.href;
       let action = url.slice(url.indexOf("action=") + 7);
@@ -86,6 +103,7 @@
 
       if (action == "showSearch") {
         loadResult("Lost");
+        setCollapsible();
         console.log("showing search");
       } else if (action == "showAll") {
         console.log("showing all");
@@ -96,21 +114,6 @@
       }
     </script>
 
-    <script>
-      var coll = document.getElementsByClassName("collapsible");
-      var i;
-
-      for (i = 0; i < coll.length; i++) {
-        coll[i].addEventListener("click", function() {
-          this.classList.toggle("active");
-          var content = this.nextElementSibling;
-          if (content.style.maxHeight) {
-            content.style.maxHeight = null;
-          } else {
-            content.style.maxHeight = content.scrollHeight + "px";
-          }
-        });
-      }
-    </script>
+    
   </body>
 </html>
