😂🤖 Checkpoint ./public/screen07.html:3398664/24100 ./public/index.html:3398664/10 ./public/screen08.html:3398664/7337 ./public/screen10.html:3398664/1737 ./public/script.js:3398664/18

--- a/public/screen07.html
+++ b/public/screen07.html
@@ -13,6 +13,10 @@
       body {
         background-color: #b3c1d1;
       }
+      
+      .btn {
+        background-color: #142a50;
+      }
 
       /* Always set the map height explicitly to define the size of the div
        * element that contains the map. */
@@ -52,10 +56,18 @@
           </div>
 
           <label for="location">Location</label><br />
-          <input type="text" id="location" name="location" /><br /><br />
+          <br />
+          <input
+            list="locations"
+            id="location"
+            name="location"
+            onfocus="this.value=''"
+          /><br /><br />
+          <datalist id="locations"> </datalist>
           <div id="mapContainer">
             <div id="map"></div>
           </div>
+
           <div id="btnRow">
             <button type="button" class="btn" onclick="seekerSubmit()">
               Submit
