📻🏮 Checkpoint ./public/screen10.html:3398664/14

--- a/public/screen10.html
+++ b/public/screen10.html
@@ -17,7 +17,7 @@
 
       .item,
       .collapsible {
-        background-color: #b3c1d1 !important;
+        background-color: #feebb1 !important;
       }
     </style>
   <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
