--- a/public/screen06.html
+++ b/public/screen06.html
@@ -57,8 +57,8 @@
         <textarea id="description" name="description"></textarea><br>
         
         <label>Attach A Photo(Optional)</label><br>
-        <input id="photo" type="file" accept="image/*" name="photo" style="display:none;"/>   
-        <label id="photoLabel" for="photo">Chose File</label>     
+        <input id="imgUpload" type="file" accept="image/*" name="photo" style="display:none;"/>   
+        <label id="photoLabel" for="imgUpload">Chose File</label>     
         <br>
         <div id="btnRow">
           <button type="button" class="btn" id="nextBtn" onclick="seekerNext()">Next</button>
